src/App.css
.App {
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

.container {
  display: flex;
  flex-wrap: row;
}

.header {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
  margin: 0;
  border-bottom: 1px solid #202225;
  height: 45px;
  background-color: #36393f;
  color: #99aab5;
}

#bubble {
  margin: 0.75rem 0.3rem 0 0.1rem;
  font-size: 1.8rem;
}

.header h1 {
  font-family: 'Kanit', sans-serif;
  display: flex;
  justify-content: center;
  margin: -0.2rem;
  color: white;
}

#onlineUsers {
  margin: .8rem;
  position: absolute;
  right: 3.3rem;
}

#profileBtn {
  margin: 1px 0;
  height: 44px;
  position: absolute;
  left: 0;
  box-shadow: none;
}

#githubBtn {
  margin: 1px 0;
  height: 44px;
  position: absolute;
  right: 0;
  box-shadow: none;
}

.btnImg {
  width: 25px;
  height: 25px;
  filter: invert(1);
}

.main-container {
  flex-grow: 12;
  min-width: 400px;
  margin-right: 200;
  height: 100vh;
  background-color: #36393f;
  color: white;
  padding: .6rem;
  /* overflow: hidden; */
}

.roomTitle {
  color: #99aab5;
}

.left-sidebar,
.right-sidebar {
  display: flex;
  flex-direction: column;
  padding: 1.2rem;
  flex-grow: 1;
  max-width: 200px;
  height: 100vh;
  min-width: 200px;
  background-color: #303136;
  color: white;
}

#landing {
  text-align: center;
  margin: 5rem auto;
  color: #99aab5;
  margin: 0;
  position: absolute;
  top: 43%;
  left: 50%;
}

#landing h1 {
  font-family: 'Kanit', sans-serif;
}

.roomchat-container {
  height: 87vh;
  display: flex;
  flex-direction: column;
  overflow: scroll;
}

.message-bar {
  position: fixed;
  bottom: 0;
  margin: 30px 20px;
  width: 68%;
}

.message-container,
.rooms-container {
  display: flex;
  flex-direction: column;
  padding: 1.5rem;
  padding-bottom: 3rem;
  margin: 0 1rem;
  /* overflow-y: auto; */
}

.myChatMessage {
  padding: .5rem 1rem;
  width: 67%;
  background: linear-gradient(135deg, #7289DA, #3dc6aa);
  border-radius: 20px 20px 0 20px;
  margin: 0 0 15px 33%;
  /* text-shadow: 1px 1px 3px rgba(0,0,0, 0.4); */
}

.theirChatMessage {
  padding: .5rem 1rem;
  width: 67%;
  background: linear-gradient(135deg,#9B84EE, #F47B68);
  border-radius: 0px 20px 20px 20px;
  margin: 0 33% 15px 0;
  /* text-shadow: 1px 1px 3px rgba(0,0,0, 0.4); */
}

